--- a/client/src/styles/project-box.sass
+++ b/client/src/styles/project-box.sass
@@ -24,35 +24,11 @@ $slideVertical: 90vw
             margin-top: 10px
             height: 40px
             width: 40px
+            background: #3a67c728
             border-radius: 50px
-            box-shadow: 0px 0px 1px 1px $secondary
+            box-shadow: 0px 0px 1px 1px $fifth
             &:hover
                 background-color: #e9eaec21
             a
                 font-size: 18px
-                color: $secondary
-
-.slide0
-    background-image: url("../assets/pap2.jpg")
-    .links-wrap
-        .link
-            box-shadow: 0px 0px 1px 1px $primary
-            a
-                color: $primary
-.slide1
-    background-image: url("../assets/nothing.jpg")
-.slide2
-    background-image: url("../assets/shitw.jpg")
-.slide3
-    background-image: url("../assets/downloader.jpg")
-.slide4
-    background-image: url("../assets/checkit.jpg")
-.slide5
-    background-image: url("../assets/office.jpg")
-    .links-wrap
-        .link
-            box-shadow: 0px 0px 1px 1px $primary
-            a
-                color: $primary
-.slide6
-    background-image: url("../assets/port.jpg")
+                color: $fifth
