chagned skill text; in projects - description title placed inside the same p with the desc itself

--- a/src/styles/projects.sass
+++ b/src/styles/projects.sass
@@ -184,7 +184,7 @@ $slideVertical: 90vw
     color: $secondary
     font-size: 0.75em
     .project-info
-        background: #ffffff11
+        background: rgba(255, 255, 255, 0.05)
         padding: 20px 40px
         border-radius: 5px
         font-size: 0.8em
