fixed thumbnail blur, changed descriptions, add new project data

--- a/src/styles/projects.sass
+++ b/src/styles/projects.sass
@@ -54,11 +54,10 @@ $slideVertical: 90vw
             cursor: pointer
             &:hover
                 img
-                    filter: blur(4px)
+                    filter: blur(2px)
                     transition: 0.2s ease-in
                 .thumbnail-info
                     visibility: visible
-                    background-color: rgba(255, 255, 255, 0.212)
                     transition: 0.2s ease-in
                     .title
                         opacity: 1
@@ -86,7 +85,8 @@ $slideVertical: 90vw
                     line-height: 18px
                     opacity: 0
                     user-select: none
-                    color: #0000007c
+                    color: #ffffff
+                    text-shadow: 0px 4px 13px #000000, 0px 2px 13px #000000, 0px 12px 23px #000000
 .slider-btn
     margin: 0 7vw
     font-size: 2em
